--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:mysql://127.0.0.1:3306/sample
 spring.datasource.username = root
-spring.datasource.password ={{password}}
+spring.datasource.password =Gauri@2002
 
 # For running on start up sql queries
 spring.sql.init.mode = always
