--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.datasource.url = jdbc:mysql://127.0.0.1:3306/lelotus
 spring.datasource.username = root
-spring.datasource.password = password
+spring.datasource.password = Shruti@236
 
 # For running on start up sql queries
 spring.sql.init.mode = always
 
+#
 # Spring security settings
 #server.ssl.enabled = true
