links error resolved5

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.password = 0poAjfibTcN0PdQxXa8J
 # For running on start up sql queries
 spring.sql.init.mode = always
 
+#deploy
+server.servlet.context-path = /
+
 #
 # Spring security settings
 #server.ssl.enabled = true
