--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password = 0poAjfibTcN0PdQxXa8J
 spring.sql.init.mode = always
 
 #deploy
-server.servlet.context-path = /
+server.servlet.context-path = /hotel
 
 #
 # Spring security settings
